--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -98,3 +98,10 @@ body {
   margin: 0;
   border: 0;
 }
+
+.navbar span.user-total {
+  float: right;
+  margin-top: 1.2rem;
+  margin-right: 1em;
+  font-size: 1rem;
+}
