--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -68,6 +68,12 @@ body {
   font-weight: 700;
 }
 
+.message-image {
+  max-width: 60%;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+}
+
 .navbar {
   background: tomato;
   border-bottom: 1px solid black;
